# fileforge

./: .gitignore  Cargo.toml  README.md  package.json
crates/cli/: Cargo.toml
crates/cli/src/: index.rs  main.rs  progress.rs  search.rs
crates/cli/src/filter/: ast.rs
crates/fileforge-analyzer/: Cargo.toml
crates/fileforge-analyzer/src/: analyzer.rs  lib.rs  manager.rs  probe.rs
crates/fileforge-cli/: Cargo.toml
crates/fileforge-cli/src/: main.rs
crates/fileforge-core/: Cargo.toml
crates/fileforge-core/src/: analysis.rs  config.rs  lib.rs  types.rs
crates/fileforge-csv/: Cargo.toml
crates/fileforge-csv/src/: analyzer.rs  lib.rs
crates/fileforge-encoding/: Cargo.toml
crates/fileforge-encoding/src/: decode.rs  detect.rs  lib.rs
crates/fileforge-engine/: Cargo.toml
crates/fileforge-engine/src/: context.rs  extract.rs  generate.rs  jsonl.rs  lib.rs  regex_search.rs  search.rs  stats.rs
crates/fileforge-index/: Cargo.toml
crates/fileforge-index/src/: lib.rs
crates/fileforge-jsonl/: Cargo.toml
crates/fileforge-jsonl/src/: analyzer.rs  lib.rs
crates/fileforge-plugin/: Cargo.toml
crates/fileforge-plugin/src/: lib.rs  textanalyzer.rs
crates/fileforge-query/: Cargo.toml
crates/fileforge-query/src/: lib.rs  parser.rs  query.rs
crates/fileforge-storage/: Cargo.toml
crates/fileforge-storage/src/: chunk_reader.rs  factory.rs  lib.rs  line_reader.rs  mmap_reader.rs  reader.rs  record.rs
crates/fileforge-text/: Cargo.toml
crates/fileforge-text/src/: analyzer.rs  lib.rs
creates/cli/: Cargo.toml
creates/cli/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
