[workspace]
members = ["crates/fileforge-analyzer",
    "crates/fileforge-cli",
    "crates/fileforge-core",
    "crates/fileforge-engine",
    "crates/fileforge-index", 
    "crates/fileforge-plugin",
    "crates/fileforge-text",
    "crates/fileforge-analyzer", 
    "crates/fileforge-storage", 
    "crates/fileforge-encoding",
]
resolver = "2"
