[package]
name = "fileforge-cli"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fileforge-core = { path = "../fileforge-core" }
fileforge-engine = { path = "../fileforge-engine" }
fileforge-index = { path = "../fileforge-index" }
fileforge-text = { path = "../fileforge-text" }
fileforge-analyzer = { path = "../fileforge-analyzer" }
fileforge-csv = { path = "../fileforge-csv" }
fileforge-jsonl = { path = "../fileforge-jsonl" }
fileforge-query = { path = "../fileforge-query" }
fileforge-storage = { path = "../fileforge-storage" }
